second part of the page update

--- a/index.html
+++ b/index.html
@@ -25,30 +25,39 @@
         <img id="img" src="https://cdn.pixabay.com/photo/2022/11/03/15/06/cat-7567706_960_720.jpg" alt="cat">
     </div>
 
-    <div class="2part">
-        <h1>Some Random Information</h1>
-        <div class="imgtxt"> <img src="https://cdn.pixabay.com/photo/2023/03/12/17/35/hare-7847442_960_720.jpg" alt="rabbit">
-        <h3>A cute rabbit</h3></div>
-        <div class="imgtxt"> <img src="https://cdn.pixabay.com/photo/2022/10/04/14/27/cat-7498364_960_720.jpg" alt="cat with blue eyes">
-        <h3>A cute british short hair with stunning blue eyes</h3></div>
-        <div class="imgtxt"> <img src="https://cdn.pixabay.com/photo/2023/03/11/11/19/bird-7844233_960_720.jpg" alt="pelicans">
-        <h3>A group of pelicans near the sea looking for food</h3></div>
-        <div class="imgtxt"> <img src="https://cdn.pixabay.com/photo/2023/03/09/15/56/monkeys-7840321_960_720.jpg" alt="monkeys">
-        <h3>two monkeys looking at the camera</h3></div>
-
+    <div class="part2">
+    </div>
+    <h1 id="rdinfo">Some random information.</h1>
+    <div class="imgtxt">
+        <div><img class="img" src="https://cdn.pixabay.com/photo/2023/03/12/17/35/hare-7847442_960_720.jpg" alt="rabbit"> 
+            <p class="txt"> A cute rabbit.</p>
+        </div>
+        <div><img class="img" src="https://cdn.pixabay.com/photo/2022/10/04/14/27/cat-7498364_960_720.jpg" alt="cat with blue eyes">
+            <p class="txt">British shorthair with beautiful blue eyes</p>
+        </div>
+        <div>
+            <img class="img" src="https://cdn.pixabay.com/photo/2023/03/11/11/19/bird-7844233_960_720.jpg" alt="pelicans">
+        <p class="txt"> A group of pelicans near the sea looking for food </p>
+        </div>
+        <div>
+            <img class="img" src="https://cdn.pixabay.com/photo/2023/03/09/15/56/monkeys-7840321_960_720.jpg" alt="monkeys">
+        <p class="txt"> two monkeys looking at the camera </p>
+        </div>
+        
+        
     </div>
 
-    <div class="3part">
+    <div class="part3">
         <div id="quote"></div>
         <h3 id="signature">-Thor, God Of Thunder</h3>
     </div>
-    <div class="4part">
+    <div class="part4">
         <div id="call">
 
         </div>
         <div class="subutton"></div>
     </div>
-    <div class="5part">
+    <div class="part5
         <footer>Copyright The Odin Project 2021</footer>
 
     </div>
