--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animal House</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="part1">
     </div>
-    <h2 id="logo">Header Logo</h2>
+    <h2 id="logo">Animal House</h2>
     <div id="hlinks">
-        <div>header link one</div>
-        <div>header link two</div>
-        <div>header link three</div>
+        <div> <a href="http://animalhealthcare.com/">Animal Health Care</a></div>
+        <div> <a href="https://www.four-paws.org/">Four Paws Website</a></div>
+        <div> <a href="https://animalcorner.org/">Animal Corner</a></div>
     </div>
     <div id="text">
-        <div id="mtext">This Website Is Awesome</div>
-        <div id="stext">This Website has some subtext that goes under the main text. It's smaller font and the color contrast is lower</div>
+        <div id="mtext">Animals are beautiful creatures</div>
+        <div id="stext">This Website is all about animals and their healthcare</div>
         <button class="subutton"> Sign up</button>
     </div>
     <div>
@@ -32,7 +32,8 @@
         <div><img class="img" src="https://cdn.pixabay.com/photo/2023/03/12/17/35/hare-7847442_960_720.jpg" alt="rabbit"> 
             <p class="txt"> A cute rabbit.</p>
         </div>
-        <div><img class="img" src="https://cdn.pixabay.com/photo/2022/10/04/14/27/cat-7498364_960_720.jpg" alt="cat with blue eyes">
+        <div>
+            <img class="img" src="https://cdn.pixabay.com/photo/2022/10/04/14/27/cat-7498364_960_720.jpg" alt="cat with blue eyes">
             <p class="txt">British shorthair with beautiful blue eyes</p>
         </div>
         <div>
@@ -48,18 +49,29 @@
     </div>
 
     <div class="part3">
-        <div id="quote"></div>
-        <h3 id="signature">-Thor, God Of Thunder</h3>
+    </div>
+    <div id="quotes">
+        <div id="quote">“If animals could speak, the dog would be a blundering outspoken fellow; but the cat would have the rare grace of never saying a word too much.”</span>
+        </div>
+            <span>
+        <div id="signature">
+            <h3>-Mark Twain</h3>
+        </div>
+        
     </div>
     <div class="part4">
         <div id="call">
-
+            <div>
+                <div id="join1">It's time for action!</div>
+                <div id="join2"> Join if you love animals!</div>
+            </div>
+            <button class="subutton2"> Sign up</button>
         </div>
-        <div class="subutton"></div>
     </div>
-    <div class="part5
-        <footer>Copyright The Odin Project 2021</footer>
-
+    <div class="part5">
+        <div>
+            <div id="copy">Copyright © Nuue 2023</div>
+        </div>
     </div>
 </body>
 </html>
